feat: updated runtime env

--- a/paraphase/v3.0.0/Dockerfile
+++ b/paraphase/v3.0.0/Dockerfile
@@ -24,8 +24,8 @@ RUN conda install -c conda-forge conda-pack && \
     snakemake-wrapper-utils=0.6.1
 
 # Set the environment variable
-ENV CONDA_ENVIRONMENT hydra
-RUN echo "source activate ${CONDA_ENVIRONMENT}" >> ~/.bashrc
+#ENV CONDA_ENVIRONMENT hydra
+#RUN echo "source activate ${CONDA_ENVIRONMENT}" >> ~/.bashrc
 
 # Modify the .bashrc file
 RUN echo "export PATH=$PATH:/opt/conda/envs/hydra/bin" >> ~/.bashrc
@@ -34,10 +34,26 @@ ENV PATH="/opt/conda/envs/hydra/bin:${PATH}"
 # hadolint ignore=SC1008
 SHELL ["/opt/conda/condabin/conda", "run", "-n", "hydra", "/bin/bash", "-c"]
 # hadolint ignore=SC1008
-RUN  /opt/conda/envs/hydra/bin/pip install --no-cache-dir paraphase==3.0.0
+#RUN  /opt/conda/envs/hydra/bin/pip install --no-cache-dir paraphase==3.0.0
 
 # Use an entry point for the paraphrase command
 # ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "hydra", "paraphrase"]
+
+# Use conda-pack to create a standalone enviornment
+# in /venv:
+RUN conda-pack -n hydra -o /tmp/env.tar
+WORKDIR /venv
+RUN tar xf /tmp/env.tar
+
+# We've put venv in same path it'll be in final image,
+# so now fix up paths:
+RUN /venv/bin/conda-unpack
+
+# The runtime-stage image; we can use Debian as the
+# base image since the Conda env also includes Python
+# for us.
+FROM debian:buster-slim AS runtime
+
 
 ################## METADATA ######################
 LABEL maintainer="padraic.corcoran@scilifelab.uu.se"
@@ -45,5 +61,16 @@ LABEL version=3.0.0
 LABEL paraphrase=3.0.0
 
 # Unite test: samtools;  minimap2;  paraphase
+
+
+# Copy /venv from the previous stage:
+# to /usr/local to make it possible
+# running the softwares without activating
+# any conda env
+
+#RUN mkdir -p /usr
+COPY --from=build /venv  /usr/
+
+
 
 
