--- a/paraphase/v3.0.0/environment.yml
+++ b/paraphase/v3.0.0/environment.yml
@@ -77,4 +77,4 @@ dependencies:
   - yaml=0.2.5=h7f98852_2
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
-prefix: /home/magza477/.conda/envs/hydra3
+prefix: /opt/conda/envs/hydra
