--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -36,8 +36,12 @@ jobs:
             IMAGE_NAME=$(echo $IMAGE_NAME | awk 'BEGIN{FS="\/"}{print($1)}')
             IMAGE_ID=${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.REPOSITORY }}/$IMAGE_NAME
             tmpName="image-$RANDOM"
+            echo "docker build $IMAGE_NAME --file $dockerFilePath --tag $tmpName"
             docker build $IMAGE_NAME --file $dockerFilePath --tag $tmpName
             IMAGE_VERSION=$(grep "^LABEL version" $dockerFilePath | awk 'BEGIN{FS="\="}{print($2)}')
+            if [[ $IMAGE_VERSION == *"VERSION"* ]]; then
+              IMAGE_VERSION=$(grep "^ARG VERSION" $dockerFilePath | awk 'BEGIN{FS="\="}{print($2)}')
+            fi
             echo "IMAGE_NAME=$IMAGE_NAME"
             echo "IMAGE_VERSION=$IMAGE_VERSION"
             docker tag $tmpName $IMAGE_ID:$IMAGE_VERSION
