--- a/sniffles2/2.2/Dockerfile
+++ b/sniffles2/2.2/Dockerfile
@@ -20,13 +20,12 @@ RUN conda create -y -n hydra -c bioconda sniffles=2.2 && \
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar
-WORKDIR /venv
-RUN tar xf /tmp/env.tar
-
 # We've put venv in same path it'll be in final image,
 # so now fix up paths:
-RUN /venv/bin/conda-unpack
+RUN conda-pack -n hydra -o /tmp/env.tar
+WORKDIR /venv
+RUN tar xf /tmp/env.tar && \
+ /venv/bin/conda-unpack
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
