feat: change how conda env is copied to final image

--- a/common/v1.11.1/Dockerfile
+++ b/common/v1.11.1/Dockerfile
@@ -18,17 +18,6 @@ RUN conda install -c conda-forge conda-pack conda-libmamba-solver && \
 	  tabix=1.11 \
 	  xlsxwriter=3.0.3
 
-
-# Use conda-pack to create a standalone enviornment
-# in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar
-WORKDIR /venv
-RUN tar xf /tmp/env.tar
-
-# We've put venv in same path it'll be in final image,
-# so now fix up paths:
-RUN /venv/bin/conda-unpack
-
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
 # for us.
@@ -50,9 +39,5 @@ LABEL snakemake-wrapper-utils=0.5.2
 LABEL tabix=1.11
 LABEL xlsxwriter=3.0.3
 
-# Copy /venv from the previous stage:
-# to /usr/local to make it possible
-# running the softwares without activating
-# any conda env
-COPY --from=build /venv /usr
-RUN pip install --no-cache-dir hydra-genetics==1.11.1
+COPY --from=build /opt/conda /opt/conda
+ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
