--- a/paraphase/3.0.0/Dockerfile
+++ b/paraphase/3.0.0/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 WORKDIR /usr/local
 
 # Install git
-RUN apt-get update && apt-get install -y git=1:2.20.1-2+deb10u3 libgsl-dev --no-install-recommends  && \
+RUN apt-get update && apt-get install -y git=1:2.20.1-2+deb10u3 libgsl-dev=2.5+dfsg-6+deb10u1 --no-install-recommends  && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
