fix: copy only the hydra env from build (#218)
* fix: copy only the hydra env from build

* fix typo in conda path

* Update Dockerfile

--- a/common/v1.11.1/Dockerfile
+++ b/common/v1.11.1/Dockerfile
@@ -39,5 +39,7 @@ LABEL snakemake-wrapper-utils=0.5.2
 LABEL tabix=1.11
 LABEL xlsxwriter=3.0.3
 
-COPY --from=build /opt/conda /opt/conda
+COPY --from=build /opt/conda/envs/hydra/ /opt/conda/envs/hydra/
 ENV PATH=${PATH}:/opt/conda/envs/hydra/bin
+
+RUN pip install --no-cache-dir hydra-genetics==1.11.1
