--- a/purecn/Dockerfile
+++ b/purecn/Dockerfile
@@ -1,7 +1,12 @@
+ARG PURECN_VERSION=0.3.6
+
 FROM markusriester/purecn:2.2.0
+
+ARG PURECN_VERSION
 
 ################## METADATA ######################
 LABEL maintainer="erik.demitz-helin@gu.se"
-LABEL version=2.2.0
+LABEL version=${PURECN_VERSION}
+LABEL version=${PURECN_VERSION}
 
 CMD ["/bin/bash"]
