--- a/purecn/Dockerfile
+++ b/purecn/Dockerfile
@@ -7,6 +7,6 @@ ARG PURECN_VERSION
 ################## METADATA ######################
 LABEL maintainer="erik.demitz-helin@gu.se"
 LABEL version=${PURECN_VERSION}
-LABEL version=${PURECN_VERSION}
+LABEL purecn=${PURECN_VERSION}
 
 CMD ["/bin/bash"]
