feat: add correct version label to purecn (#219)
* feat: add correct version label to purecn

* Update Dockerfile

* Update Dockerfile

--- a/purecn/Dockerfile
+++ b/purecn/Dockerfile
@@ -1,7 +1,12 @@
-FROM markusriester/purecn:2.2.0
+ARG PURECN_VERSION=2.2.0
+
+FROM markusriester/purecn:${PURECN_VERSION}
+
+ARG PURECN_VERSION
 
 ################## METADATA ######################
 LABEL maintainer="erik.demitz-helin@gu.se"
-LABEL version=2.2.0
+LABEL version=${PURECN_VERSION}
+LABEL purecn=${PURECN_VERSION}
 
 CMD ["/bin/bash"]
