--- a/manta/Dockerfile
+++ b/manta/Dockerfile
@@ -1,5 +1,8 @@
 ARG MANTA_VERSION=1.6.0
 FROM debian:buster-slim
+
+ARG MANTA_VERSION
+
 # The build-stage image:
 ENV MANTA_VERSION=${MANTA_VERSION}
 
@@ -7,14 +10,13 @@ ENV MANTA_VERSION=${MANTA_VERSION}
 LABEL maintainer="patrik.smeds@scilifelab.uu.se"
 LABEL version=${MANTA_VERSION}
 LABEL manta=${MANTA_VERSION}
-
-RUN apt-get update && apt-get install --no-install-recommends -y bzip2=1.0.6-9.2~deb10u1 \
+RUN apt-get update && apt-get install --no-install-recommends -y bzip2=1.0.6-9.2~deb10u2 \
                                                                  gcc=4:8.3.0-1 \
                                                                  g++=4:8.3.0-1 \
                                                                  make=4.2.1-1.2 \
                                                                  python=2.7.16-1 \
-                                                                 zlib1g-dev=1:1.2.11.dfsg-1+deb10u1 \
-                                                                 curl=7.64.0-4+deb10u3 && \
+                                                                 zlib1g-dev=1:1.2.11.dfsg-1+deb10u2 \
+                                                                 curl=7.64.0-4+deb10u9 && \
     apt-get install --no-install-recommends -y ca-certificates=20200601~deb10u2 && \
     rm -rf /var/lib/apt/lists/* && \
     curl -L -v https://github.com/Illumina/manta/releases/download/v${MANTA_VERSION}/manta-${MANTA_VERSION}.release_src.tar.bz2  -o manta-${MANTA_VERSION}.release_src.tar.bz2 && \
