--- a/trgt/0.9.0/Dockerfile
+++ b/trgt/0.9.0/Dockerfile
@@ -2,9 +2,9 @@
 FROM continuumio/miniconda3:4.10.3 AS build
 
 # Install conda-pack:
-RUN conda install -c conda-forge conda-pack && \
+RUN conda install -c conda-forge conda-pack python=3.9  && \
     conda create --name hydra -c bioconda \
-    trgt=0.9.0
+    trgt=0.9.0 python=3.9
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
@@ -32,3 +32,6 @@ LABEL version=0.9.0
 # any conda env
 
 COPY --from=build /venv  /usr/local/
+
+
+
