--- a/CpG-tools/2.3.2/Dockerfile
+++ b/CpG-tools/2.3.2/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu:latest
-
+FROM ubuntu:20.04
 # Install wget and tar
-RUN apt-get update && apt-get install -y wget tar && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends wget=1.20.3-1ubuntu2 tar=1.30+dfsg-7ubuntu0.20.04.4 ca-certificates=20230311ubuntu0.20.04.1  && rm -rf /var/lib/apt/lists/*
+
 
 # Download and extract pb-CpG-tools
 RUN wget https://github.com/PacificBiosciences/pb-CpG-tools/releases/download/v2.3.2/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu.tar.gz \
@@ -9,7 +9,7 @@ RUN wget https://github.com/PacificBiosciences/pb-CpG-tools/releases/download/v2
     && rm pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu.tar.gz
 
 # Set the PATH environment variable to include pb-CpG-tools
-ENV PATH="/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu:${PATH}"
+ENV PATH="/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu:/pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu/bin:${PATH}"
 
 # Set the working directory
 WORKDIR /pb-CpG-tools-v2.3.2-x86_64-unknown-linux-gnu
@@ -27,5 +27,6 @@ LABEL python=3.9
 LABEL version=2.3.2
 
 
+#TEST:  aligned_bam_to_cpg_scores --help 
 
 
