--- a/longqc/latest/Dockerfile
+++ b/longqc/latest/Dockerfile
@@ -1,12 +1,6 @@
 # build minimap2-coverage
 FROM continuumio/miniconda3
 
-### MAINTAINER ###
-MAINTAINER Yoshinori Fukasawa <yoshinori.fukasawa@kaust.edu.sa>
-### LABELS ###
-LABEL base_image="miniconda3"
-LABEL software="LongQC docker"
-LABEL software.version="latest"
 
 ### Basic dependency ###
 RUN apt-get clean all && \
@@ -23,8 +17,8 @@ RUN apt-get clean all && \
 ### LongQC installation ###
 ADD https://api.github.com/repos/yfukasawa/longqc/git/refs/heads/minimap2_update version.json
 RUN git clone https://github.com/yfukasawa/LongQC.git $HOME/LongQC
-RUN cd $HOME/LongQC/minimap2-coverage && make
-RUN cd $HOME/LongQC && \
+WORKDIR $HOME/LongQC/minimap2-coverage && make
+WORKDIR $HOME/LongQC && \
     sed -i \
     -e '1{s;^;#!/opt/conda/bin/python\n;}' \
     longQC.py && \
@@ -63,6 +57,10 @@ ENTRYPOINT ["longQC.py"]
 LABEL maintainer="magdalena.z@scilifelab.uu.se"
 LABEL longqc=latest
 LABEL version=latest
+LABEL base_image="miniconda3"
+LABEL software="LongQC docker"
+LABEL software.version="latest"
+
 
 # Unit test runqc -h
 # Unit test sampleqc -h
