--- a/trgt/v1.0.0/Dockerfile
+++ b/trgt/v1.0.0/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && \
     wget --progress=dot:giga --no-check-certificate 'https://github.com/PacificBiosciences/trgt/releases/download/v1.0.0/trgt-v1.0.0-x86_64-unknown-linux-gnu.tar.gz' && \
     tar xvf trgt-v1.0.0-x86_64-unknown-linux-gnu.tar.gz
 
-ENV PATH="${PATH}:/trgt-v1.0.0-x86_64-unknown-linux-gnu/trgt"
+ENV PATH=${PATH}:/trgt-v1.0.0-x86_64-unknown-linux-gnu/
 
 ################## METADATA ######################
 LABEL maintainer="padraic.corcoran@scilifelab.uu.se"
