fix: Update Dockerfile

--- a/vep/113/Dockerfile
+++ b/vep/113/Dockerfile
@@ -2,6 +2,6 @@
 FROM  ensemblorg/ensembl-vep:release_113.0
 
 ################## METADATA ######################
-LABEL maintainer="jonas.almlof@scilifelab.uu.se"
+LABEL maintainer="jonas.almlof@scilifelab.uu.se,patrik.smeds@scilifelab.uu.se"
 LABEL version=113.0
 LABEL ensembl-vep=113.0
